# EPIC-DEV

eos-auth-harness/: .gitignore  CMakeLists.txt  README.md
eos-auth-harness/include/: auth_client.h
eos-auth-harness/src/: auth_client.cpp  cli_main.cpp
eos-auth-harness/tests/: CMakeLists.txt  auth_client_tests.cpp  integration_tests.cpp
